--- a/src/default.html
+++ b/src/default.html
@@ -1,52 +1,19 @@
-<div class="form-group schema-form-{{form.type}} {{form.htmlClass}}"
-     ng-class="{'has-error': form.disableErrorState !== true && hasError(), 'has-success': form.disableSuccessState !== true && hasSuccess(), 'has-feedback': form.feedback !== false }">
-  <label class="control-label {{form.labelHtmlClass}}" ng-class="{'sr-only': !showTitle()}" for="{{form.key.slice(-1)[0]}}">{{form.title}}</label>
+<div class="panel panel-default schema-form-{{form.type}} {{form.htmlClass}}">
+    <div class="panel-heading panel-success">
+        <label class="control-label {{form.labelHtmlClass}}" ng-class="{'sr-only': !showTitle()}"
+               for="{{form.key.slice(-1)[0]}}">{{form.title}}</label>
+    </div>
 
-  <input ng-if="!form.fieldAddonLeft && !form.fieldAddonRight"
-         ng-show="form.key"
-         type="{{form.type}}"
-         step="any"
-         sf-changed="form"
-         placeholder="{{form.placeholder}}"
-         class="form-control {{form.fieldHtmlClass}}"
-         id="{{form.key.slice(-1)[0]}}"
-         sf-field-model
-         ng-disabled="form.readonly"
-         schema-validate="form"
-         name="{{form.key.slice(-1)[0]}}"
-         aria-describedby="{{form.key.slice(-1)[0] + 'Status'}}">
+    <div class="panel-body">
+        <div sf-field-model="replaceAll" ng-bind="$$value$$"></div>
+    </div>
 
-  <div ng-if="form.fieldAddonLeft || form.fieldAddonRight"
-       ng-class="{'input-group': (form.fieldAddonLeft || form.fieldAddonRight)}">
-    <span ng-if="form.fieldAddonLeft"
-          class="input-group-addon"
-          ng-bind-html="form.fieldAddonLeft"></span>
-    <input ng-show="form.key"
-           type="{{form.type}}"
-           step="any"
-           sf-changed="form"
-           placeholder="{{form.placeholder}}"
-           class="form-control {{form.fieldHtmlClass}}"
-           id="{{form.key.slice(-1)[0]}}"
-           sf-field-model
-           ng-disabled="form.readonly"
-           schema-validate="form"
-           name="{{form.key.slice(-1)[0]}}"
-           aria-describedby="{{form.key.slice(-1)[0] + 'Status'}}">
+    <div class="panel-footer" ng-if="form.feedback || form.description">
+      <span ng-if="form.feedback !== false"
+            class="form-control-feedback"
+            ng-class="evalInScope(form.feedback) || {'glyphicon': true, 'glyphicon-ok': hasSuccess(), 'glyphicon-remove': hasError() }"
+            aria-hidden="true"></span>
 
-    <span ng-if="form.fieldAddonRight"
-          class="input-group-addon"
-          ng-bind-html="form.fieldAddonRight"></span>
-  </div>
-
-  <span ng-if="form.feedback !== false"
-        class="form-control-feedback"
-        ng-class="evalInScope(form.feedback) || {'glyphicon': true, 'glyphicon-ok': hasSuccess(), 'glyphicon-remove': hasError() }"
-        aria-hidden="true"></span>
-
-  <span ng-if="hasError() || hasSuccess()"
-        id="{{form.key.slice(-1)[0] + 'Status'}}"
-        class="sr-only">{{ hasSuccess() ? '(success)' : '(error)' }}</span>
-
-  <div class="help-block" sf-message="form.description"></div>
+        <div class="help-block" sf-message="form.description"></div>
+    </div>
 </div>
