--- a/src/checkboxes.html
+++ b/src/checkboxes.html
@@ -1,12 +1,7 @@
-<div sf-field-model="sf-new-array"
-     sf-new-array
+<div sf-array="form" ng-model="$$value$$"
      class="form-group schema-form-checkboxes {{form.htmlClass}}"
      ng-class="{'has-error': form.disableErrorState !== true &&  hasError(), 'has-success': form.disableSuccessState !== true &&  hasSuccess()}">
-  <label class="control-label {{form.labelHtmlClass}}"
-         sf-field-model
-         schema-validate="form"
-         ng-show="showTitle()">{{form.title}}</label>
-
+  <label class="control-label {{form.labelHtmlClass}}" ng-show="showTitle()">{{form.title}}</label>
   <div class="checkbox" ng-repeat="val in titleMapValues track by $index" >
     <label>
       <input type="checkbox"
