--- a/src/default.html
+++ b/src/default.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default schema-form-{{form.type}} {{form.htmlClass}}" ng-if="!form.readonly">
+<div class="panel panel-default schema-form-{{form.type}} {{form.htmlClass}}" ng-if="form.readonly">
     <div class="panel-heading">
         <label>{{form.title}}</label>
     </div>
@@ -12,7 +12,7 @@
 </div>
 
 <div class="form-group schema-form-{{form.type}} {{form.htmlClass}}"
-     ng-if="form.readonly"
+     ng-if="!form.readonly"
      ng-class="{'has-error': form.disableErrorState !== true && hasError(), 'has-success': form.disableSuccessState !== true && hasSuccess(), 'has-feedback': form.feedback !== false }">
     <label class="control-label {{form.labelHtmlClass}}" ng-class="{'sr-only': !showTitle()}"
            for="{{form.key.slice(-1)[0]}}">{{form.title}}</label>
