--- a/src/radio-buttons.html
+++ b/src/radio-buttons.html
@@ -1,4 +1,4 @@
-<div class="form-group panel panel-default {{form.htmlClass}}" ng-if="!form.readonly">
+<div class="form-group panel panel-default {{form.htmlClass}}" ng-if="form.readonly">
   <div class="panel-heading">
     <label class="control-label {{form.labelHtmlClass}}" ng-show="showTitle()">{{form.title}}</label>
   </div>
@@ -12,7 +12,7 @@
 </div>
 
 <div class="form-group schema-form-radiobuttons {{form.htmlClass}}"
-     ng-if="form.readonly"
+     ng-if="!form.readonly"
      ng-class="{'has-error': form.disableErrorState !== true &&  hasError(), 'has-success': form.disableSuccessState !== true &&  hasSuccess()}">
   <div>
     <label class="control-label {{form.labelHtmlClass}}" ng-show="showTitle()">{{form.title}}</label>
