--- a/src/default.html
+++ b/src/default.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default schema-form-{{form.type}} {{form.htmlClass}}" ng-if="form.readonly">
     <div class="panel-heading">
-        <label>{{form.title}}</label>
+        <label ng-show="showTitle()">{{form.title}}</label>
     </div>
 
     <div class="panel-body" ng-bind="$$value$$"></div>
