--- a/src/default.html
+++ b/src/default.html
@@ -3,11 +3,17 @@
         <label ng-show="showTitle()">{{form.title}}</label>
     </div>
 
-    <div class="panel-body" ng-bind="$$value$$"></div>
+    <div class="panel-body">
+        <span ng-bind="$$value$$"></span>
+        <button ng-if="form.description" class="btn btn-default pull-right"
+                ng-click="tab.show_index = !tab.show_index ? $index : tab.show_index !== $index ? $index : null">
+            <i class="glyphicon glyphicon-question-sign"></i>
+        </button>
+    </div>
 
-    <div class="panel-footer" ng-if="form.feedback || form.description">
+    <div class="panel-footer" ng-if="form.feedback || (form.description && tab.show_index === $index )">
         <span ng-if="form.feedback !== false" class="form-control-feedback" aria-hidden="true"></span>
-        <div class="help-block" sf-message="form.description"></div>
+        <div ng-show="tab.show_index === $index"  class="help-block" sf-message="form.description"></div>
     </div>
 </div>
 
@@ -17,26 +23,9 @@
     <label class="control-label {{form.labelHtmlClass}}" ng-class="{'sr-only': !showTitle()}"
            for="{{form.key.slice(-1)[0]}}">{{form.title}}</label>
 
-    <input ng-if="!form.fieldAddonLeft && !form.fieldAddonRight"
-           ng-show="form.key"
-           type="{{form.type}}"
-           step="any"
-           sf-changed="form"
-           placeholder="{{form.placeholder}}"
-           class="form-control {{form.fieldHtmlClass}}"
-           id="{{form.key.slice(-1)[0]}}"
-           ng-model-options="form.ngModelOptions"
-           ng-model="$$value$$"
-           ng-disabled="form.readonly"
-           schema-validate="form"
-           name="{{form.key.slice(-1)[0]}}"
-           aria-describedby="{{form.key.slice(-1)[0] + 'Status'}}">
+    <div ng-class="{'input-group': form.description || hasSuccess() }"
+         ng-if="!form.fieldAddonLeft && !form.fieldAddonRight">
 
-    <div ng-if="form.fieldAddonLeft || form.fieldAddonRight"
-         ng-class="{'input-group': (form.fieldAddonLeft || form.fieldAddonRight)}">
-    <span ng-if="form.fieldAddonLeft"
-          class="input-group-addon"
-          ng-bind-html="form.fieldAddonLeft"></span>
         <input ng-show="form.key"
                type="{{form.type}}"
                step="any"
@@ -51,19 +40,59 @@
                name="{{form.key.slice(-1)[0]}}"
                aria-describedby="{{form.key.slice(-1)[0] + 'Status'}}">
 
-    <span ng-if="form.fieldAddonRight"
-          class="input-group-addon"
-          ng-bind-html="form.fieldAddonRight"></span>
+        <span class="input-group-btn">
+            <button class="btn btn-default" ng-if="hasSuccess() && form.feedback !== false" disabled="disabled">
+                <i class="glyphicon glyphicon-ok"></i>
+            </button>
+            <button ng-if="form.description" class="btn btn-default"
+                    ng-click="tab.show_index = !tab.show_index ? $index : tab.show_index !== $index ? $index : null">
+                <i class="glyphicon glyphicon-question-sign"></i>
+            </button>
+        </span>
+
     </div>
 
-  <span ng-if="form.feedback !== false"
-        class="form-control-feedback"
-        ng-class="evalInScope(form.feedback) || {'glyphicon': true, 'glyphicon-ok': hasSuccess(), 'glyphicon-remove': hasError() }"
-        aria-hidden="true"></span>
+    <div ng-if="form.fieldAddonLeft || form.fieldAddonRight" class="input-group">
 
-  <span ng-if="hasError() || hasSuccess()"
-        id="{{form.key.slice(-1)[0] + 'Status'}}"
-        class="sr-only">{{ hasSuccess() ? '(success)' : '(error)' }}</span>
+        <span ng-if="form.fieldAddonLeft"
+              class="input-group-addon"
+              ng-bind-html="form.fieldAddonLeft"></span>
 
-    <div class="help-block" sf-message="form.description"></div>
+        <input ng-show="form.key"
+               type="{{form.type}}"
+               step="any"
+               sf-changed="form"
+               placeholder="{{form.placeholder}}"
+               class="form-control {{form.fieldHtmlClass}}"
+               id="{{form.key.slice(-1)[0]}}"
+               ng-model-options="form.ngModelOptions"
+               ng-model="$$value$$"
+               ng-disabled="form.readonly"
+               schema-validate="form"
+               name="{{form.key.slice(-1)[0]}}"
+               aria-describedby="{{form.key.slice(-1)[0] + 'Status'}}">
+
+        <span class="input-group-btn">
+            <button class="btn btn-default" ng-if="hasSuccess() && form.feedback !== false" disabled="disabled">
+                <i class="glyphicon glyphicon-ok"></i>
+            </button>
+            <button ng-if="form.description" class="btn btn-default"
+                    ng-click="tab.show_index = !tab.show_index ? $index : tab.show_index !== $index ? $index : null">
+                <i class="glyphicon glyphicon-question-sign"></i>
+            </button>
+        </span>
+
+
+        <span ng-if="form.fieldAddonRight"
+              class="input-group-addon"
+              ng-bind-html="form.fieldAddonRight"></span>
+    </div>
+
+
+    <span ng-if="hasError() || hasSuccess()" id="{{form.key.slice(-1)[0] + 'Status'}}" class="sr-only">
+        {{ hasSuccess() ? '(success)' : '(error)' }}
+    </span>
+
+    <div ng-show="$index === tab.show_index" class="help-block" ng-if="form.description"
+         sf-message="form.description"></div>
 </div>
