--- a/src/image-url.html
+++ b/src/image-url.html
@@ -5,11 +5,16 @@
 
     <div class="panel-body">
         <img class="img-responsive" ng-src="{{$$value$$}}" alt="">
+
+        <button ng-if="form.description" class="btn btn-default pull-right"
+                ng-click="tab.show_index = !tab.show_index ? $index : tab.show_index !== $index ? $index : null">
+            <i class="glyphicon glyphicon-question-sign"></i>
+        </button>
     </div>
 
-    <div class="panel-footer" ng-if="form.feedback || form.description">
+    <div class="panel-footer" ng-if="form.feedback || (form.description && tab.show_index === $index )">
         <span ng-if="form.feedback !== false" class="form-control-feedback" aria-hidden="true"></span>
-        <div class="help-block" sf-message="form.description"></div>
+        <div ng-show="tab.show_index === $index"  class="help-block" sf-message="form.description"></div>
     </div>
 </div>
 
@@ -19,21 +24,35 @@
     <label class="control-label {{form.labelHtmlClass}}" ng-class="{'sr-only': !showTitle()}"
            for="{{form.key.slice(-1)[0]}}">{{form.title}}</label>
 
-    <input ng-if="!form.fieldAddonLeft && !form.fieldAddonRight"
-           ng-show="form.key"
-           type="{{form.type}}"
-           step="any"
-           sf-changed="form"
-           placeholder="{{form.placeholder}}"
-           class="form-control {{form.fieldHtmlClass}}"
-           id="{{form.key.slice(-1)[0]}}"
-           ng-model-options="form.ngModelOptions"
-           ng-model="$$value$$"
-           ng-disabled="form.readonly"
-           schema-validate="form"
-           name="{{form.key.slice(-1)[0]}}"
-           aria-describedby="{{form.key.slice(-1)[0] + 'Status'}}">
+    <div ng-class="{'input-group': form.description || hasSuccess() }"
+         ng-if="!form.fieldAddonLeft && !form.fieldAddonRight">
 
+        <input ng-if="!form.fieldAddonLeft && !form.fieldAddonRight"
+               ng-show="form.key"
+               type="{{form.type}}"
+               step="any"
+               sf-changed="form"
+               placeholder="{{form.placeholder}}"
+               class="form-control {{form.fieldHtmlClass}}"
+               id="{{form.key.slice(-1)[0]}}"
+               ng-model-options="form.ngModelOptions"
+               ng-model="$$value$$"
+               ng-disabled="form.readonly"
+               schema-validate="form"
+               name="{{form.key.slice(-1)[0]}}"
+               aria-describedby="{{form.key.slice(-1)[0] + 'Status'}}">
+
+        <span class="input-group-btn">
+            <button class="btn btn-default" ng-if="hasSuccess() && form.feedback !== false" disabled="disabled">
+                <i class="glyphicon glyphicon-ok"></i>
+            </button>
+            <button ng-if="form.description" class="btn btn-default"
+                    ng-click="tab.show_index = !tab.show_index ? $index : tab.show_index !== $index ? $index : null">
+                <i class="glyphicon glyphicon-question-sign"></i>
+            </button>
+        </span>
+
+    </div>
 
     <img class="img-thumbnail" ng-show="form.key" ng-src="{{$$value$$}}" alt="" width="{{form.preview.width}}"
          height="{{form.preview.height}}">
@@ -41,9 +60,10 @@
 
     <div ng-if="form.fieldAddonLeft || form.fieldAddonRight"
          ng-class="{'input-group': (form.fieldAddonLeft || form.fieldAddonRight)}">
-    <span ng-if="form.fieldAddonLeft"
-          class="input-group-addon"
-          ng-bind-html="form.fieldAddonLeft"></span>
+        <span ng-if="form.fieldAddonLeft"
+              class="input-group-addon"
+              ng-bind-html="form.fieldAddonLeft"></span>
+
         <input ng-show="form.key"
                type="{{form.type}}"
                step="any"
@@ -58,6 +78,16 @@
                name="{{form.key.slice(-1)[0]}}"
                aria-describedby="{{form.key.slice(-1)[0] + 'Status'}}">
 
+        <span class="input-group-btn">
+            <button class="btn btn-default" ng-if="hasSuccess() && form.feedback !== false" disabled="disabled">
+                <i class="glyphicon glyphicon-ok"></i>
+            </button>
+            <button ng-if="form.description" class="btn btn-default"
+                    ng-click="tab.show_index = !tab.show_index ? $index : tab.show_index !== $index ? $index : null">
+                <i class="glyphicon glyphicon-question-sign"></i>
+            </button>
+        </span>
+
         <img class="img-thumbnail" ng-show="form.key" ng-src="{{$$value$$}}" alt="" width="{{form.preview.width}}"
              height="{{form.preview.height}}">
 
@@ -67,14 +97,9 @@
           ng-bind-html="form.fieldAddonRight"></span>
     </div>
 
-  <span ng-if="form.feedback !== false"
-        class="form-control-feedback"
-        ng-class="evalInScope(form.feedback) || {'glyphicon': true, 'glyphicon-ok': hasSuccess(), 'glyphicon-remove': hasError() }"
-        aria-hidden="true"></span>
-
   <span ng-if="hasError() || hasSuccess()"
         id="{{form.key.slice(-1)[0] + 'Status'}}"
         class="sr-only">{{ hasSuccess() ? '(success)' : '(error)' }}</span>
 
-    <div class="help-block" sf-message="form.description"></div>
+    <div ng-show="$index === tab.show_index" class="help-block" sf-message="form.description"></div>
 </div>
