--- a/src/image-url.html
+++ b/src/image-url.html
@@ -1,4 +1,5 @@
-<div class="panel panel-default schema-form-{{form.type}} {{form.htmlClass}}" ng-if="form.readonly">
+<div ng-if="form.readonly && $$value$$ && $$value$$.length > 0"
+     class="panel panel-default schema-form-{{form.type}} {{form.htmlClass}}">
     <div class="panel-heading">
         <label ng-show="showTitle()">{{form.title}}</label>
     </div>
@@ -14,7 +15,7 @@
 
     <div class="panel-footer" ng-if="form.feedback || (form.description && tab.show_index === $index )">
         <span ng-if="form.feedback !== false" class="form-control-feedback" aria-hidden="true"></span>
-        <div ng-show="tab.show_index === $index"  class="help-block" sf-message="form.description"></div>
+        <div ng-show="tab.show_index === $index" class="help-block" sf-message="form.description"></div>
     </div>
 </div>
 
