--- a/src/radio-buttons.html
+++ b/src/radio-buttons.html
@@ -1,38 +1,42 @@
-<div class="form-group panel panel-default {{form.htmlClass}}" ng-if="form.readonly">
-  <div class="panel-heading">
-    <label class="control-label {{form.labelHtmlClass}}" ng-show="showTitle()">{{form.title}}</label>
-  </div>
+<div ng-if="form.readonly"
+     class="form-group panel panel-default {{form.htmlClass}}">
 
+  <pre>{{form.titleMap | json}}</pre>
+  <pre>{{form.titleMap | emptyArray | json}}</pre>
+  <pre>{{$$value$$ | json}}</pre>
 
-    <div ng-repeat="item in form.titleMap">
-      <p class="panel-body" ng-if="item.value == $$value$$">{{item.name}}</p>
+    <div class="panel-heading">
+        <label class="control-label {{form.labelHtmlClass}}" ng-show="showTitle()">{{form.title}}</label>
     </div>
 
-  <div ng-if="form.description" class="panel-footer help-block" sf-message="form.description"></div>
+    <div ng-repeat="item in form.titleMap">
+        <p class="panel-body" ng-if="item.value == $$value$$">{{item.name}}</p>
+    </div>
+
+    <div ng-if="form.description" class="panel-footer help-block" sf-message="form.description"></div>
 </div>
 
-<div class="form-group schema-form-radiobuttons {{form.htmlClass}}"
-     ng-if="!form.readonly"
+<div ng-if="!form.readonly" class="form-group schema-form-radiobuttons {{form.htmlClass}}"
      ng-class="{'has-error': form.disableErrorState !== true &&  hasError(), 'has-success': form.disableSuccessState !== true &&  hasSuccess()}">
-  <div>
-    <label class="control-label {{form.labelHtmlClass}}" ng-show="showTitle()">{{form.title}}</label>
-  </div>
-  <div class="btn-group">
-    <label class="btn {{ (item.value === $$value$$) ? form.style.selected || 'btn-default' : form.style.unselected || 'btn-default'; }}"
-           ng-class="{ active: item.value === $$value$$ }"
-           ng-repeat="item in form.titleMap">
-      <input type="radio"
-             class="{{form.fieldHtmlClass}}"
-             sf-changed="form"
-             style="display: none;"
-             ng-disabled="form.readonly"
-             ng-model="$$value$$"
-             ng-model-options="form.ngModelOptions"
-             schema-validate="form"
-             ng-value="item.value"
-             name="{{form.key.join('.')}}">
-      <span ng-bind-html="item.name"></span>
-    </label>
-  </div>
-  <div class="help-block" sf-message="form.description"></div>
+    <div>
+        <label class="control-label {{form.labelHtmlClass}}" ng-show="showTitle()">{{form.title}}</label>
+    </div>
+    <div class="btn-group">
+        <label class="btn {{ (item.value === $$value$$) ? form.style.selected || 'btn-default' : form.style.unselected || 'btn-default'; }}"
+               ng-class="{ active: item.value === $$value$$ }"
+               ng-repeat="item in form.titleMap">
+            <input type="radio"
+                   class="{{form.fieldHtmlClass}}"
+                   sf-changed="form"
+                   style="display: none;"
+                   ng-disabled="form.readonly"
+                   ng-model="$$value$$"
+                   ng-model-options="form.ngModelOptions"
+                   schema-validate="form"
+                   ng-value="item.value"
+                   name="{{form.key.join('.')}}">
+            <span ng-bind-html="item.name"></span>
+        </label>
+    </div>
+    <div class="help-block" sf-message="form.description"></div>
 </div>
