--- a/src/strapselect.html
+++ b/src/strapselect.html
@@ -22,13 +22,14 @@
     </div>
 </div>
 
-<div ng-if="form.readonly" ng-controller="dynamicSelectController" class="panel panel-default {{form.htmlClass}}">
+<div ng-if="form.readonly && (form.titleMap | emptyArray).length > 0 && $$value$$"
+     ng-controller="dynamicSelectController" class="panel panel-default {{form.htmlClass}}">
     <div class="panel-heading" ng-show="showTitle()">
         <label>{{form.title}}</label>
     </div>
 
     <div class="panel panel-body {{form.fieldHtmlClass}}" ng-init="populateTitleMap(form)">
-        <div ng-if="(form.options.multiple == 'true') || (form.options.multiple == true)">
+        <div ng-if="(form.options.multiple === 'true') || (form.options.multiple === true)">
             <div ng-repeat="item in form.titleMap | filterMulti:$$value$$">
                 {{item.name}}
             </div>
