Add style for validate icon

--- a/src/default.html
+++ b/src/default.html
@@ -42,8 +42,8 @@
                aria-describedby="{{form.key.slice(-1)[0] + 'Status'}}">
 
         <span class="input-group-btn">
-            <button class="btn btn-default" ng-if="hasSuccess() && form.feedback !== false" disabled="disabled">
-                <i class="glyphicon glyphicon-ok"></i>
+            <button class="btn btn-default" style="border-color: #3c763d;" ng-if="hasSuccess() && form.feedback !== false" disabled="disabled">
+                <i class="glyphicon glyphicon-ok" style="color: #3c763d; "></i>
             </button>
             <button ng-if="form.description" class="btn btn-default"
                     ng-click="tab.show_index = !tab.show_index ? $index : tab.show_index !== $index ? $index : null">
@@ -74,8 +74,8 @@
                aria-describedby="{{form.key.slice(-1)[0] + 'Status'}}">
 
         <span class="input-group-btn">
-            <button class="btn btn-default" ng-if="hasSuccess() && form.feedback !== false" disabled="disabled">
-                <i class="glyphicon glyphicon-ok"></i>
+            <button class="btn btn-default" style="border-color: #3c763d;" ng-if="hasSuccess() && form.feedback !== false" disabled="disabled">
+                <i class="glyphicon glyphicon-ok" style="color: #3c763d; "></i>
             </button>
             <button ng-if="form.description" class="btn btn-default"
                     ng-click="tab.show_index = !tab.show_index ? $index : tab.show_index !== $index ? $index : null">
