--- a/src/image-url.html
+++ b/src/image-url.html
@@ -45,7 +45,7 @@
 
         <span class="input-group-btn">
             <button class="btn btn-default" ng-if="hasSuccess() && form.feedback !== false" disabled="disabled">
-                <i class="glyphicon glyphicon-ok"></i>
+                <i class="glyphicon glyphicon-ok" style="color: #3c763d;"></i>
             </button>
             <button ng-if="form.description" class="btn btn-default"
                     ng-click="tab.show_index = !tab.show_index ? $index : tab.show_index !== $index ? $index : null">
@@ -81,7 +81,7 @@
 
         <span class="input-group-btn">
             <button class="btn btn-default" ng-if="hasSuccess() && form.feedback !== false" disabled="disabled">
-                <i class="glyphicon glyphicon-ok"></i>
+                <i class="glyphicon glyphicon-ok" style="color: #3c763d;"></i>
             </button>
             <button ng-if="form.description" class="btn btn-default"
                     ng-click="tab.show_index = !tab.show_index ? $index : tab.show_index !== $index ? $index : null">
