--- a/src/array.html
+++ b/src/array.html
@@ -1,4 +1,4 @@
-<div ng-if="form.readonly && (form.titleMap | emptyArray).length > 0 && $$value$$"
+<div ng-if="form.readonly && $$value$$"
      sf-array="form" class="schema-form-array {{form.htmlClass}}"
      ng-model="$$value$$" ng-model-options="form.ngModelOptions">
     <label class="control-label" ng-show="showTitle()">{{ form.title }}</label>
