add button for add img

--- a/src/image-url.html
+++ b/src/image-url.html
@@ -59,6 +59,10 @@
          height="{{form.preview.height}}">
 
 
+    <button class="btn btn-default" ng-click="addImage();" ng-show="!readOnly">
+      <i class="glyphicon glyphicon-plus-sign"></i>&nbsp;<span>Add image</span>
+    </button>
+
     <div ng-if="form.fieldAddonLeft || form.fieldAddonRight"
          ng-class="{'input-group': (form.fieldAddonLeft || form.fieldAddonRight)}">
         <span ng-if="form.fieldAddonLeft"
