--- a/src/image-url.html
+++ b/src/image-url.html
@@ -55,8 +55,8 @@
 
     </div>
 
-    <img class="img-thumbnail" ng-show="form.key" ng-src="{{$$value$$}}" alt="" width="{{form.preview.width}}"
-         height="{{form.preview.height}}">
+    <!--<img class="img-thumbnail" ng-show="form.key" ng-src="{{$$value$$}}" alt="" width="{{form.preview.width}}"-->
+         <!--height="{{form.preview.height}}">-->
 
     <button class="btn btn-default" ng-click="addImage();" ng-show="!readOnly">
       <i class="glyphicon glyphicon-plus-sign"></i>&nbsp;<span>Add image</span>
